[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kali-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server exposing a safe subset of Kali Linux tooling"
readme = "README.md"
authors = [
  {name = "OpenAI Simulated Agent"}
]
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.15.0",
  "pydantic>=2.8",
]

[project.scripts]
kali-mcp-server = "kali_mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kali_mcp_server"]
